--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-black==22.3.0
-fastapi==0.65.2
-uvicorn==0.17.6
-pylint==2.13.5
-python-dotenv==0.20.0
-pydantic==1.10.0
-pytest==7.1.1
-makefun==1.13.1
-mypy==0.942
+black
+fastapi
+uvicorn
+pylint
+python-dotenv
+pydantic
+pytest
+makefun
+web3-ethereum-defi[data]
